<resources>
    <string name="app_name">DoNations</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Donation Detail</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="title_activity_start">Donate to oders in need</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="email">Email</string>
    <string name="login_page">Login Page</string>
    <string name="name_or_institution">Name or Institution</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="condition">Condition:</string>
    <string name="dimensions">Lengh X Width</string>
    <string name="buttonMakeDonation">Make Donation</string>
    <string name="specs">Specs</string>
    <string name="weight">Weight in Pounds</string>
    <string name="signin_or_create_an_account">Sign In or Create an Account</string>

    <string name="donate_to">Donate to:</string>
    <string name="userEmail">Email</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="pick_up_address">Pick Up Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="donate">Donate</string>
    <string name="sign_out">Sign Out</string>
    <string name="textview">TextView</string>
    <string name="view_donations">View Donations</string>


    <array name="donationPlace">
        <item>GoodWill</item>
        <item>Salvation Army</item>
        <item>RedCross</item>

    </array>

    <array name="donationDate">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday Army</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Week Days</item>
        <item>Weekend</item>

    </array>


    <array name="categories">
        <item>Category</item>
        <item>Electrical/Electronic</item>
        <item>Furniture</item>
        <item>Recreational Vehicle</item>
        <item>Clothes</item>
        <item>Cars</item>
        <item>Construction material</item>

    </array>

</resources>
